# programming_lang

./: .editorconfig  .gitignore  CMakeLists.txt  Compiler.sln  Compiler.vcxproj  both.bat  compile.bat  compiler.py  hello.asm  hello.meow  init.bat  meow.py  run.bat
grammar/: LICENSE.txt  language-configuration.json  meowlanggrammar-0.0.1.vsix  package.json
grammar/syntaxes/: meowLang.tmLanguage.json
src/: main.cpp
z_meow/: compile.bat  init.bat  run.bat  test.asm  test.meow
